Append reset link after win or lose.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 
     <div id="controls" class="flex">
       <div class="menu">
-        <a href="#reset" onclick="init();">Reset</a>
-        <a href="">Try Again</a>
+        <a href="" onclick="evt => evt.preventDefault(); init();">Reset</a>
       </div>
       <div class="message">You have 4 attempts left!</div>
       <div class="modes">
