--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 
     <div id="controls" class="flex">
       <div class="menu">
-        <a href="#reset" onclick="init();">Reset</a>
-        <a href="">Try Again</a>
+        <a href="" onclick="event.preventDefault(); init();">Reset</a>
       </div>
       <div class="message">You have 4 attempts left!</div>
       <div class="modes">
@@ -38,7 +37,7 @@
     <div class="box-wrapper flex"></div>
   </main>
 
-  <script src="js/app.js"></script>
+  <script src="js/app.js" defer></script>
 </body>
 
 </html>
