Updated reset process

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div id="controls" class="flex">
       <div class="menu">
-        <a href="" onclick="event.preventDefault(); init();">Reset</a>
+        <a href="" id="reset">Reset</a>
       </div>
       <div class="message">You have 4 attempts left!</div>
       <div class="modes">
