--- a/index.html
+++ b/index.html
@@ -1,43 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Color Guessing Game</title>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Color Guessing Game</title>
-  <link rel="stylesheet" href="css/styles.css" />
-</head>
+  <body>
+    <main>
+      <header>
+        <div id="title">
+          <h1>Color Guessing Game</h1>
+          <h1>Guess the color: RGB(<span id="display-color"></span>)</h1>
+        </div>
+      </header>
 
-<body>
-  <main>
-    <header>
-      <div id="title">
-        <h1>Color Guessing Game</h1>
-        <h1>Guess the color: RGB(<span id="display-color"></span>)</h1>
+      <div id="controls" class="flex">
+        <div class="menu">
+          <a href="" id="reset">Reset</a>
+        </div>
+        <div class="message">You have 4 attempts left!</div>
+        <div class="modes">
+          <ul>
+            <li class="active">Easy</li>
+            <li>Medium</li>
+            <li>Hard</li>
+          </ul>
+        </div>
       </div>
-    </header>
 
-    <div id="controls" class="flex">
-      <div class="menu">
-        <a href="" id="reset">Reset</a>
-      </div>
-      <div class="message">You have 4 attempts left!</div>
-      <div class="modes">
-        <ul>
-          <li class="active">Easy</li>
-          <li>Medium</li>
-          <li>Hard</li>
-        </ul>
-      </div>
-    </div>
+      <div id="user-sellected-mode"></div>
 
-    <div id="user-sellected-mode"></div>
+      <div class="box-wrapper flex"></div>
+    </main>
 
-    <div class="box-wrapper flex"></div>
-  </main>
-
-  <script src="js/app.js" defer></script>
-</body>
-
+    <script src="dist/app.js" defer></script>
+  </body>
 </html>
